2025-03-19  Zhengyi Fu  <i@fuzy.me>

	Scroll the window so that current line is at top 30% after jumping

	* init.el (+recenter-top-30%): New function.
	(consult-after-jump-hook, xref-after-jump-hook)
	(xref-after-return-hook): Add it and remove `recenter'.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (add-log/vc-dwim-commit): Signal a user-error if vc-dwim
	exits with non-zero values.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	Add convenient command for vc-dwim

	* init.el (add-log/vc-dwim-commit): New command.
	Bind "C-c RET" to this command in `change-log-mode-map'.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	Autoload should not contain .elc? suffixes

	* templates/emacs-lisp.eld <autoloadf>: Remove suffixe from the
	file name.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	Recenter after jumping through Xref

	* init.el (xref-after-return-hook, xref-after-jump-hook): Add
	recenter.

2025-03-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (consult-eglot-symbols): Bind M-s M-s and M-s s to
	`consult-eglot-symbols'.

2025-03-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (auto-mode-alist): Open .clangd and .clang-format files
	with YAML mode.

2025-03-17  Zhengyi Fu  <i@fuzy.me>

	Allow autoload to load byte-compiled Lisp files

	* init.el:
	* site-lisp/persp-mode-config.el:
	* site-lisp/tui/tui.el: Remove .el suffix from the second
	arguments of `autoload'.

2025-03-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (corfu--minibuffer-on): Autoload this function and add
	it to `minibuffer-setup-hook'.

2025-03-14  Zhengyi Fu <i@fuzy.me>

	Do not enable Eat integration for Eshell on Windows

	* init.el <eat>: Do not enable `eat-eshell-mode' and
	`eat-eshell-visual-command-mode' on windows.

2025-03-14  Zhengyi Fu  <i@fuzy.me>

	Setup `log-edit' for `git-commit-mode'

	* init.el (+git-commit--log-edit-h): New function.  Added to
	`git-commit-setup-hook'.

2025-03-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Load gnus-diff after gnus-art.

2025-03-14  Zhengyi Fu  <i@fuzy.me>

	Add package `repeat-fu'
