@@ -1550,7 +1550,12 @@ Display the result in a posframe." t)
 
 ;;;; Add-Log
 
+(defvar vc-dwim-post-commit-hook nil)
+
 (defun add-log/vc-dwim-commit ()
+  "Invoke vc-dwim --commit with the current file.
+
+Run hook `vc-dwim-post-commit-hook'."
   (interactive)
   (let ((default-directory (vc-root-dir))
         exitcode)
@@ -1566,10 +1571,17 @@ Display the result in a posframe." t)
         (unless (zerop exitcode)
           (goto-char (point-min))
           (user-error "%s" (buffer-substring-no-properties (point) (line-end-position)))
-          (add-face-text-property (point) (line-end-position) 'error 'append))))))
+          (add-face-text-property (point) (line-end-position) 'error 'append))))
+    (when (zerop exitcode)
+      (run-hooks 'vc-dwim-post-commit-hook))))
 
 (after-load! add-log
   (keymap-set change-log-mode-map "C-c RET" #'add-log/vc-dwim-commit))
+
+(after-load! vc
+  (add-hook 'vc-dwim-post-commit-hook #'vc-refresh-state))
+(after-load! magit
+  (add-hook 'vc-dwim-post-commit-hook #'magit-refresh))
 
 ;;;; diff-hl
 
